@@ -15,8 +15,6 @@ This file is probably not usable for anybody except me ;-).
 
 - add support for acquiring number of messages in sending queue
 
-- database driver should use EncodeUTF8 instead of DecodeUnicodeString
-
 - split a bit some huge source files
     find . -type f -name '*.c' -not -path '*.svn*' | xargs stat -c '%s %n' | sort -n
         64582 ./gammu/misc.c
